feat: scaffold projects model
